--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -35,7 +35,7 @@ h1 {
 /* TODO: figure out where to put this */
 
 h1.homepage-title {
-  margin: 2rem 0 0 0;
+  margin: 1.5rem 0 0 0;
 }
 
 
@@ -62,7 +62,7 @@ a {
 }
 
 .site-footer {
-  background: $gray-100;
+  background: $light-gray;
 }
 
 .menu--main li a {
@@ -380,4 +380,8 @@ issue is caused by inheriting .button */
 
 .top-search {
   padding-left: 0;
+}
+
+.path-frontpage #block-feedbacklink {
+  @extend .container;
 }
