--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -90,7 +90,7 @@
 <main {{ attributes.addClass(main_classes) }} id="content" role="main">
   {{ page.content }}
 </main>
-<footer class="site-footer bg-light text-dark">
+<footer class="site-footer text-dark">
   <div class="container">
     <div class="row">
       {% if page.footer_first or page.footer_second %}
