--- a/web/themes/custom/cloudy/scss/components/_content.scss
+++ b/web/themes/custom/cloudy/scss/components/_content.scss
@@ -44,9 +44,9 @@ ol.steps {
 #block-feedbacklink .content {
   @extend .container-fluid;
   @extend .border;
-  @extend .bg-light;
   @extend .rounded;
   margin-top: 2rem;
+  background-color: $light-gray;
 }
 
 #block-feedbacklink .content p {
