--- a/web/themes/custom/cloudy/scss/components/_search.scss
+++ b/web/themes/custom/cloudy/scss/components/_search.scss
@@ -43,7 +43,7 @@
       flex: 1 1 auto;
     }
     .form-submit {
-      padding: 0 $input-btn-padding-x-lg * 2;
+      padding: 0 $input-btn-padding-x-lg * 1;
       font-size: 2rem;
     }
   }
@@ -51,7 +51,12 @@
 
 .path-frontpage .search-region-container {
   background-color: #F8F9FA;
-  padding: 4rem 0;
+	@include media-breakpoint-up(sm) {
+      padding: 0;
+    }
+	@include media-breakpoint-up(lg)  {
+      padding: 4rem 0;
+    }
 }
 
 .popular {
