--- a/web/themes/custom/cloudy/scss/components/_search.scss
+++ b/web/themes/custom/cloudy/scss/components/_search.scss
@@ -22,7 +22,7 @@
   .form-submit {
     @extend .btn;
     @extend .btn-light;
-    border: $border-width solid;
+    border: $border-width solid #000 !important;
     border-radius: 0 $border-radius-tight $border-radius-tight 0;
     margin: 0;
     font-family: "Font Awesome\ 5 Free";
