POWR-911 fix margin for tabs region

--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -65,7 +65,7 @@
 </header>
 {% set tabs = page.tabs|render %}
 {% if tabs %}
-  <div class="bg-light tabs" role="navigation" id="tabs">
+  <div class="bg-light" role="navigation" id="tabs">
     {{ tabs }}
   </div>
 {% endif %}
