POWR-900 update the popular tag output; add popular field to pages, update views and css

--- a/web/themes/custom/cloudy/scss/components/_search.scss
+++ b/web/themes/custom/cloudy/scss/components/_search.scss
@@ -32,6 +32,16 @@
   }
 }
 
+.header {
+  .search-api-page-block-form {
+    .form-search,
+    .form-action {
+      @extend .form-control;
+      padding: .125rem .75rem;
+    }
+  }
+}
+
 .main-content {
   .search-api-page-block-form {
     form {
