--- a/web/themes/custom/cloudy/templates/content/page/node--page--teaser.html.twig
+++ b/web/themes/custom/cloudy/templates/content/page/node--page--teaser.html.twig
@@ -8,8 +8,8 @@
       <p>{{ node.field_summary.value }}</p>
     </div>
   {% endif %}
-  <a class="badge badge-pill padge-light mb-1 order-1 align-self-start">
+  <div class="badge badge-light mb-1 order-1 align-self-start">
     <span class="sr-only">Type is</span>
-    {{ content.field_page_type.0['#title'] }}
-  </a>
+      {{ content.field_popular }} {{ content.field_page_type.0['#title'] }}
+  </div>
 </div>
