POWR-900 clean up search form borders

--- a/web/themes/custom/cloudy/scss/components/_search.scss
+++ b/web/themes/custom/cloudy/scss/components/_search.scss
@@ -11,10 +11,12 @@
     flex: 1 1 auto;
   }
   .form-search {
-    border: $border-width solid;
-    border-right: 0px;
+    border-top: $border-width solid #000 !important;
+    border-bottom: $border-width solid #000 !important;
+    border-left: $border-width solid #000 !important;
+    border-right: 0 solid #000 !important;
     border-radius: $border-radius-tight 0 0 $border-radius-tight !important;
-    margin: 0;
+    margin: 0 0 0 1rem;
   }
   .form-actions {
     @extend .input-group-append;
