--- a/web/themes/custom/cloudy/scss/components/_search.scss
+++ b/web/themes/custom/cloudy/scss/components/_search.scss
@@ -16,7 +16,7 @@
     border-left: $border-width solid #000 !important;
     border-right: 0 solid #000 !important;
     border-radius: $border-radius-tight 0 0 $border-radius-tight !important;
-    margin: 0 0 0 1rem;
+    margin: 0;
   }
   .form-actions {
     @extend .input-group-append;
@@ -36,6 +36,9 @@
 
 .header {
   .search-api-page-block-form {
+    .form-search {
+      margin: 0 0 0 1rem;
+    }
     .form-search,
     .form-action {
       @extend .form-control;
