POWR-929 fix search break and add in a caption fix for screenshots

--- a/web/themes/custom/cloudy/scss/components/_search.scss
+++ b/web/themes/custom/cloudy/scss/components/_search.scss
@@ -38,6 +38,7 @@
   .search-api-page-block-form {
     .form-search {
       margin: 0 0 0 1rem;
+      min-width: 230px;
     }
     .form-search,
     .form-action {
