--- a/web/themes/custom/cloudy/templates/media/filter-caption.html.twig
+++ b/web/themes/custom/cloudy/templates/media/filter-caption.html.twig
@@ -14,5 +14,5 @@
 #}
 <figure role="group" class="figure media-embed caption caption-{{ tag }}{%- if classes %} {{ classes }}{%- endif %}">
 {{ node }}
-<figcaption class="figure-caption text-center">{{ caption }}</figcaption>
+<figcaption class="figure-caption">{{ caption }}</figcaption>
 </figure>
