POWR-929 img-fluid breaks align-right images and is unneeded.

--- a/web/themes/custom/cloudy/templates/field/image.html.twig
+++ b/web/themes/custom/cloudy/templates/field/image.html.twig
@@ -12,8 +12,7 @@
 #}
 {%
     set classes = [
-      'img-fluid',
-      style_name ? 'image-style-' ~ style_name|clean_class,
+      style_name ? 'image-style-' ~ style_name|clean_class
   ]
   %}
   <img{{ attributes.addClass(classes) }} />
