POWR-754 Remove bottom margin from admin tabs ul

--- a/web/themes/custom/cloudy/scss/components/_tabs.scss
+++ b/web/themes/custom/cloudy/scss/components/_tabs.scss
@@ -3,10 +3,10 @@
  * Theme styling for tabs.
  */
 
-.tabs {
-    margin: 0;
+ul.tabs, .tabs {
+  margin: 0;
 }
 
 .tabs .primary {
-    margin-bottom: $spacer;
+  margin-bottom: $spacer;
 }
