POWR-844 Update fig caption style

--- a/web/themes/custom/cloudy/scss/components/_media.scss
+++ b/web/themes/custom/cloudy/scss/components/_media.scss
@@ -16,7 +16,8 @@
   @extend .d-flex;
   flex-direction: column;
   .figure-caption {
-    margin-top: 0rem;
+    color: $gray-900;
+    margin-top: 0;
   }
 }
 
