POWR-907 Update blockquote style

--- a/web/themes/custom/cloudy/scss/_components.scss
+++ b/web/themes/custom/cloudy/scss/_components.scss
@@ -1,6 +1,7 @@
 @import 'components/_affix';
 @import 'components/_alerts';
 @import 'components/_badge';
+@import 'components/_blockquote';
 @import 'components/_breadcrumb';
 @import 'components/_buttons';
 @import 'components/_card';
