--- a/web/themes/custom/cloudy/scss/_theme-variables.scss
+++ b/web/themes/custom/cloudy/scss/_theme-variables.scss
@@ -30,3 +30,8 @@ $navbar-menu-alert-badge-bg: rgba(167, 41, 37, .9);
 
 /* Border radius for buttons and form elements */
 $border-radius-tight: .125em;
+
+
+/* Blockquotes */
+// Include after fixing Sass import order and update blockquote inside _extends.scss
+// $blockquote-height-border: $border-width * 10;
