--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--quote.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--quote.html.twig
@@ -1,9 +1,9 @@
 {% extends 'paragraph.html.twig' %}
 {% block content %}
-<blockquote class="blockquote">
+<blockquote>
   {{ paragraph.field_quoted_text|view }}
   {% if paragraph.field_attribution is not empty or paragraph.field_citation is not empty %}
-  <footer class="blockquote-footer">
+  <footer>
     {{ paragraph.field_attribution.value }}
     {% if paragraph.field_citation %}
       in <cite title="Source Title">{{ paragraph.field_citation.value }}</cite>
