--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -322,11 +322,17 @@ span.mailto::before {
   p,
   blockquote,
   hr,
+  h3,
+  h4,
+  h5,
+  h6,
   .list-group-item,
   .field--name-field-body-content ul,
   .field--name-field-body-content ol,
   body.cke_editable_themed ul,
   body.cke_editable_themed ol,
+  .step ol,
+  .step ul,
   .teaser__tags {
     max-width: 729px;
   }
