POWR-907 Hide elements that overflow within blockquotes

--- a/web/themes/custom/cloudy/scss/components/_blockquote.scss
+++ b/web/themes/custom/cloudy/scss/components/_blockquote.scss
@@ -1,10 +1,11 @@
 blockquote {
   @extend .blockquote;
-  font-weight: $font-weight-semibold;
   // Todo: replace border height with $blockquote-height-border
   border-top: $spacer / 2 solid $black;
-  padding-top: $spacer / 3;
+  font-weight: $font-weight-semibold;
   margin-bottom: $spacer * 1.5;
+  padding-top: $spacer / 3;
+  overflow: hidden;
   footer {
     @extend .blockquote-footer;
   }
