POWR-950 50% responsive right should become 100% responsive full at certain breakpoints

--- a/web/themes/custom/cloudy/scss/components/_media.scss
+++ b/web/themes/custom/cloudy/scss/components/_media.scss
@@ -35,12 +35,14 @@
   max-width: 100px;
 }
 /* "embed-image" and "embed-video" classes are added by filter portland_media_embed_helper_classes */
-.embed-image.align-right {
-  float: right;
+.align-right, .embed-image.responsive-right {
   height: auto;
-  max-width: 50%;
-  margin-left: 2rem;
   text-align: center;
+  float: right;
+  @include media-breakpoint-up(md) {
+    margin-left: $spacer / 2;
+    max-width: 50%;
+  }
   .field--type-image img {
     height: auto;
     max-width: 100%;
@@ -48,11 +50,6 @@
   }
 }
 
-.embed-image.responsive-right {
-  float: right;
-  max-width: 50%;
-  margin-left: 2rem;
-}
 .embed-image.responsive-full {
   max-width: 100%;
 }
