POWR-909 add in default view, field styling, group permissions

--- a/web/themes/custom/cloudy/templates/field/field--field-phone.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--field-phone.html.twig
@@ -38,29 +38,12 @@
  * @ingroup themeable
  */
 #}
-{% if label_hidden %}
-  {% if multiple %}
-    <div{{ attributes }}>
-      {% for item in items %}
-        <div{{ item.attributes }}><a href="tel:+1-{{ item.content }}"><i class="fas fa-phone"></i> {{ item.content }}</a></div>
-      {% endfor %}
-    </div>
-  {% else %}
-    {% for item in items %}
-      <div{{ attributes }}><a href="tel:+1-{{ item.content }}"><i class="fas fa-phone"></i> {{ item.content }}</a></div>
-    {% endfor %}
-  {% endif %}
-{% else %}
-  <div{{ attributes }}>
+
+<div{{ attributes }}>
+  {% if not label_hidden %}
     <div{{ title_attributes }}>{{ label }}</div>
-    {% if multiple %}
-      <div>
-    {% endif %}
-    {% for item in items %}
-      <div{{ item.attributes }}><a href="tel:+1-{{ item.content }}"><i class="fas fa-phone"></i> {{ item.content }}</a></div>
-    {% endfor %}
-    {% if multiple %}
-      </div>
-    {% endif %}
-  </div>
-{% endif %}
+  {% endif %}
+  {% for item in items %}
+    <div{{ item.attributes }}><a href="tel:+1{{ item.content['#title'] }}" class="btn powr-btn-link"><i class="fas fa-phone"></i> {{ item.content['#title'] }}</a></div>
+  {% endfor %}
+</div>
