Update right align min width 50% md and up

--- a/web/themes/custom/cloudy/scss/components/_media.scss
+++ b/web/themes/custom/cloudy/scss/components/_media.scss
@@ -40,9 +40,10 @@
   height: auto;
   text-align: center;
   float: right;
+  width: 100%;
   @include media-breakpoint-up(md) {
     margin-left: $spacer / 2;
-    max-width: 50%;
+    width: 50%;
   }
   .field--type-image img {
     height: auto;
