POWR-909 fix both the permit and page teasers and search POWR-947

--- a/web/themes/custom/cloudy/templates/content/page/node--page--search-result.html.twig
+++ b/web/themes/custom/cloudy/templates/content/page/node--page--search-result.html.twig
@@ -11,12 +11,7 @@
   {% if node.field_page_type.value %}
     <span class="badge badge-pill badge-light mb-1 order-1 align-self-start">
       <span class="sr-only">Type is</span>
-        {% if node.field_page_type[i].entity %}
-          {% set page_type = {
-              title: node.field_page_type[i].entity.name.value,
-            }%}
-            {{ page_type.title }}
-        {% endif %}
+        {{ content.field_page_type }}
     </span>
   {% endif %}
 </div>
