--- a/web/themes/custom/cloudy/templates/content/page/node--page--teaser.html.twig
+++ b/web/themes/custom/cloudy/templates/content/page/node--page--teaser.html.twig
@@ -10,6 +10,6 @@
   {% endif %}
   <div class="badge badge-light mb-1 order-1 align-self-start">
     <span class="sr-only">Type is</span>
-      {{ content.field_popular }} {{ content.field_page_type.0['#title'] }}
+      {{ content.field_popular }} {{ content.field_page_type }}
   </div>
 </div>
