--- a/web/themes/custom/cloudy/templates/content/development-permit/node--development-permit--search-result.html.twig
+++ b/web/themes/custom/cloudy/templates/content/development-permit/node--development-permit--search-result.html.twig
@@ -8,14 +8,10 @@
     <p>{{ node.field_summary.value }}</p>
   </div>
   {% endif %}
-  <div class="badge badge-light mb-1 order-1 align-self-start">
-    <span class="sr-only">Type is</span>
-    {{ content.field_popular }} 
-    {{ content.field_permit_type }}
-    {% if content.field_permit_type %}
-      {{ content.field_permit_type.0['#title'] }}
-    {% else %}
-      {{ node.type.entity.label }}
-    {% endif %}
-  </div>
+    {% if node.field_permit_type.value %}
+    <span class="badge badge-pill badge-light mb-1 order-1 align-self-start">
+      <span class="sr-only">Type is</span>
+      {{ content.field_permit_type }}
+    </span>
+  {% endif %}
 </div>
