--- a/web/themes/custom/cloudy/templates/content/development-permit/node--development-permit--teaser.html.twig
+++ b/web/themes/custom/cloudy/templates/content/development-permit/node--development-permit--teaser.html.twig
@@ -10,9 +10,9 @@
   {% endif %}
   <div class="badge badge-light mb-1 order-1 align-self-start">
     <span class="sr-only">Type is</span>
-    {{ content.field_popular }} 
+    {{ content.field_popular }}
     {% if content.field_permit_type %}
-      {{ content.field_permit_type.0['#title'] }}
+      {{ content.field_permit_type }}
     {% else %}
       {{ node.type.entity.label }}
     {% endif %}
