POWR-825 list-style css

--- a/web/themes/custom/cloudy/scss/_components.scss
+++ b/web/themes/custom/cloudy/scss/_components.scss
@@ -20,6 +20,7 @@
 @import 'components/_indented';
 @import 'components/_item-list';
 @import 'components/_list-group';
+@import 'components/_list-styles';
 @import 'components/_media';
 @import 'components/_nav';
 @import 'components/paragraphs';
