POWR-952 Create template for embedded media types

--- a/web/themes/custom/cloudy/scss/components/_media.scss
+++ b/web/themes/custom/cloudy/scss/components/_media.scss
@@ -26,11 +26,16 @@
   margin-right: 10px;
 }
 
-.image-unpublished, .video-unpublished, .audio-unpublished {
+.badge--unpublished {
   position: absolute;
   z-index: 1;
   margin: 5px;
 }
+// .image-unpublished, .video-unpublished, .audio-unpublished {
+//   position: absolute;
+//   z-index: 1;
+//   margin: 5px;
+// }
 
 .image-preview img.image-style-thumbnail {
   max-width: 100px;
@@ -59,3 +64,7 @@
   width: 50%;
   margin-left: 2rem;
 }
+
+
+// responsive-full
+// responsive-right
