--- a/web/themes/custom/cloudy/templates/media/media--document--embedded.html.twig
+++ b/web/themes/custom/cloudy/templates/media/media--document--embedded.html.twig
@@ -12,21 +12,10 @@
  * @ingroup themeable
  */
 #}
-{%
-  set classes = [
-    'media',
-    'media--type-' ~ media.bundle()|clean_class,
-    not media.isPublished() ? 'media--unpublished',
-    view_mode ? 'media--view-mode-' ~ view_mode|clean_class,
-  ]
-%}
-<article{{ attributes.addClass(classes) }}>
-  {{ title_suffix.contextual_links }}
-  {% if content %}
-    {% if (media.isPublished() is same as(FALSE)) %}
-    <span class="badge badge-danger document-unpublished">Unpublished</span>
-    {% endif %}
-    <a href="{{ fileURL }}">{{ file_icon_markup(media.field_mime_type.0.value) }}{{ name }}</a>
-    {{ file_size_string(media.field_file_size.0.value) }}
-  {% endif %}
-</article>
+{% extends 'media.html.twig' %}
+{% block content %}
+  {% set icon = media.field_mime_type.0.value %}
+  {% set fileSize = media.field_file_size.0.value %}
+  <a href="{{ fileURL }}">{{ file_icon_markup(icon) }}{{ name }}</a>
+  {{ file_size_string(fileSize) }}
+{% endblock %}
