--- a/web/themes/custom/cloudy/templates/media/media--image--embedded.html.twig
+++ b/web/themes/custom/cloudy/templates/media/media--image--embedded.html.twig
@@ -12,20 +12,9 @@
  * @ingroup themeable
  */
 #}
-{%
-  set classes = [
-    'media',
-    'media--type-' ~ media.bundle()|clean_class,
-    not media.isPublished() ? 'media--unpublished',
-    view_mode ? 'media--view-mode-' ~ view_mode|clean_class,
-  ]
-%}
-<article{{ attributes.addClass(classes) }}>
-  {{ title_suffix.contextual_links }}
-  {% if content %}
-    {% if (media.isPublished() is same as(FALSE)) %}
-    <span class="badge badge-danger image-unpublished">Unpublished</span>
-    {% endif %}
-    {{ content }}
+{% extends 'media.html.twig' %}
+{% block content %}
+  {% if content.image %}
+    {{ content.image }}
   {% endif %}
-</article>
+{% endblock %}
