POWR-961 Tweak search config

--- a/web/themes/custom/cloudy/scss/components/_search.scss
+++ b/web/themes/custom/cloudy/scss/components/_search.scss
@@ -10,7 +10,8 @@
     display: flex;
     flex: 1 1 auto;
   }
-  .form-search {
+  .form-search,
+  .form-autocomplete {
     border-top: $border-width solid #000 !important;
     border-bottom: $border-width solid #000 !important;
     border-left: $border-width solid #000 !important;
@@ -36,12 +37,14 @@
 
 .header {
   .search-api-page-block-form {
-    .form-search {
+    .form-search,
+    .form-autocomplete {
       margin: 0 0 0 1rem;
       min-width: 230px;
     }
     .form-search,
-    .form-action {
+    .form-action,
+    .form-autocomplete {
       @extend .form-control;
       padding: .125rem .75rem;
     }
@@ -54,7 +57,8 @@
       margin: $spacer 0 0 0;
     }
     .form-search,
-    .form-action {
+    .form-action,
+    .form-autocomplete {
       @extend .form-control-lg;
       flex: 1 1 auto;
     }
@@ -84,4 +88,12 @@
 .popular h2 {
   @extend .lead;
   margin-bottom: .25rem;
+}
+
+.js input.form-autocomplete {
+  background-position: right 10px center;
+}
+
+.js input.form-autocomplete.ui-autocomplete-loading {
+  background-position: right 10px center;
 }
