--- a/web/themes/custom/cloudy/templates/form/input.html.twig
+++ b/web/themes/custom/cloudy/templates/form/input.html.twig
@@ -10,10 +10,12 @@
  * @see template_preprocess_input()
  */
 #}
+{% if attributes.id != "edit-keys" %}
 {%
   set input_classes = input_classes|default([
     'form-control',
   ])
 %}
+{% endif %}
 
 <input{{ attributes.addClass(input_classes) }} />{{ children }}
