POWR-952 Update embedded media templates and styles

--- a/web/themes/custom/cloudy/templates/field/image.html.twig
+++ b/web/themes/custom/cloudy/templates/field/image.html.twig
@@ -11,9 +11,10 @@
  */
 #}
 {%
-    set classes = [
-      style_name ? 'image-style-' ~ style_name|clean_class
+  set classes = [
+    style_name ? 'image-style-' ~ style_name|clean_class,
+    'img-fluid',
   ]
-  %}
-  <img{{ attributes.addClass(classes) }} />
-  
+%}
+
+<img{{attributes.addClass(classes)}}/>
