--- a/web/themes/custom/cloudy/templates/media/filter-caption.html.twig
+++ b/web/themes/custom/cloudy/templates/media/filter-caption.html.twig
@@ -12,7 +12,7 @@
  * - string classes: The classes of the captioned HTML tag.
  */
 #}
-<figure role="group" class="figure media-embed caption caption-{{ tag }}{%- if classes %} {{ classes }}{%- endif %}">
-{{ node }}
-<figcaption class="figure-caption">{{ caption }}</figcaption>
+<figure class="figure media-embed caption caption-{{ tag }}{%- if classes %} {{ classes }}{%- endif %}" role="group">
+  {{ node }}
+  <figcaption class="figure-caption">{{ caption }}</figcaption>
 </figure>
