--- a/web/themes/custom/cloudy/templates/media/media--image--embedded.html.twig
+++ b/web/themes/custom/cloudy/templates/media/media--image--embedded.html.twig
@@ -13,8 +13,11 @@
  */
 #}
 {% extends 'media.html.twig' %}
+
+{% set attributes = attributes.addClass('text-center') %}
+
 {% block content %}
   {% if content.image %}
-    {{ content.image }}
+    {{- content.image -}}
   {% endif %}
 {% endblock %}
