--- a/web/themes/custom/cloudy/templates/media/media.html.twig
+++ b/web/themes/custom/cloudy/templates/media/media.html.twig
@@ -13,18 +13,25 @@
  */
 #}
 {%
-  set media_classes = [
+  set media_classes = media_classes|default([
     'media',
     'media--type-' ~ media.bundle()|clean_class,
     view_mode ? 'media--view-mode-' ~ view_mode|clean_class,
-  ]
+  ])
+%}
+
+{%
+  set badge_classes = badge_classes|default([
+    'badge',
+    'badge-danger',
+  ])
 %}
 
 {% spaceless %}
   <div{{attributes.addClass(media_classes)}}>
     {% block status %}
       {% if not media.isPublished() %}
-        <span class="badge badge-danger badge--unpublished">{{ "Unpublished" | t }}</span>
+        <span{{ attributes.addClass(badge_classes).removeClass(media_classes) }}>{{ 'unpublished'|t|capitalize }}</span>
       {% endif %}
     {% endblock %}
     {% block content %}
