--- a/web/themes/custom/cloudy/templates/media/media--document--embedded.html.twig
+++ b/web/themes/custom/cloudy/templates/media/media--document--embedded.html.twig
@@ -6,16 +6,24 @@
  * Available variables:
  * - name: Name of the media.
  * - content: Media content.
- *
+ *embed
  * @see template_preprocess_media()
  *
  * @ingroup themeable
  */
 #}
-{% extends 'media.html.twig' %}
-{% block content %}
-  {% set icon = media.field_mime_type.0.value %}
-  {% set fileSize = media.field_file_size.0.value %}
-  <a href="{{ fileURL }}">{{ file_icon_markup(icon) }}{{ name }}</a>
-  {{ file_size_string(fileSize) }}
-{% endblock %}
+{% embed 'media.html.twig' %}
+
+  {% spaceless %}
+    {% block status %}
+      {% set badge_classes = badge_classes|merge(['d-inline-block', 'mr-2']) %}
+      {{ parent() }}
+    {% endblock %}
+    {% block content %}
+      {% set icon = file_icon_markup(media.field_mime_type.0.value) %}
+      {% set fileSize = file_size_string(media.field_file_size.0.value) %}
+      <a href="{{ fileURL }}">{{ icon|raw }}{{ name }}</a>
+      {{ fileSize }}
+    {% endblock %}
+  {% endspaceless %}
+{% endembed %}
