--- a/web/themes/custom/cloudy/templates/form/form-element.html.twig
+++ b/web/themes/custom/cloudy/templates/form/form-element.html.twig
@@ -79,7 +79,7 @@
         {{ description.content }}
       </span>
     {% endif %}
-    <label{{label_attributes.addClass(label_classes).addClass(input_classes)}}>
+    <div{{label_attributes.addClass(label_classes, input_classes, "form-element-container")}}>
       {% if label_display == 'before' %}
         {{ label }}
       {% endif %}
@@ -87,7 +87,7 @@
       {% if label_display == 'after' %}
         {{ label }}
       {% endif %}
-    </label>
+    </div>
     {% if suffix is not empty %}
       <span class="field-suffix">
         {{ suffix }}</span>
