POWR-952 Cleanup media templates and update badge style

--- a/web/themes/custom/cloudy/scss/components/_media.scss
+++ b/web/themes/custom/cloudy/scss/components/_media.scss
@@ -10,12 +10,6 @@
   // full width media sitting on top of each other
   @extend .d-flex;
   flex-direction: column;
-  margin: 0 0 $spacer*2 0;
-  .figure-caption {
-    color: $gray-900;
-    font-size: $font-size-sm;
-    text-align: left;
-  }
 }
 
 .image-preview img.image-style-thumbnail {
@@ -32,23 +26,34 @@
 
 // Set right-aligned media max-width to 50% on screens md and up.
 .align-right,
-.embed-video.align-right,
+.responsive-right {
+  @include media-breakpoint-up(md) {
+    margin-left: $spacer;
+    width: 50%;
+  }
+}
+
+.align-right {
+  text-align: center;
+  img {
+    width: auto; // Images smaller than 50%
+  }
+}
+
 .responsive-right {
   @include media-breakpoint-up(md) {
     float: right;
-    margin-left: $spacer*2;
-    width: 50%;
-    img {
-      width: auto; // Images smaller than 50%
-    }
   }
 }
 
 // Decrease embedded-entity bottom margin
 // when wrapped inside a figure tag.
 .embedded-entity {
-  margin-bottom: ($spacer * 2);
+  margin-bottom: $spacer;
   clear: both; // Clear sibling floats
+  img {
+    margin: 0;
+  }
   .figure & {
     margin-bottom: ($spacer / 2);
   }
