--- a/web/themes/custom/cloudy/templates/media/filter-caption.html.twig
+++ b/web/themes/custom/cloudy/templates/media/filter-caption.html.twig
@@ -12,7 +12,7 @@
  * - string classes: The classes of the captioned HTML tag.
  */
 #}
-<figure class="figure media-embed caption caption-{{ tag }}{%- if classes %} {{ classes }}{%- endif %}" role="group">
+<figure class="figure media-embed caption-{{ tag }}{%- if classes %} {{ classes }}{%- endif %}" role="group">
   {{ node }}
-  <figcaption class="figure-caption">{{ caption }}</figcaption>
+  <figcaption class="figure-caption text-left">{{ caption }}</figcaption>
 </figure>
