--- a/web/themes/custom/cloudy/templates/media/media--document--embedded.html.twig
+++ b/web/themes/custom/cloudy/templates/media/media--document--embedded.html.twig
@@ -12,8 +12,9 @@
  * @ingroup themeable
  */
 #}
-{% embed 'media.html.twig' %}
-
+{% embed 'media.html.twig' with {
+  'margin' : '0'
+}%}
   {% spaceless %}
     {% block status %}
       {% set badge_classes = badge_classes|merge(['d-inline-block', 'mr-2']) %}
