--- a/web/themes/custom/cloudy/templates/media/media--image--embedded.html.twig
+++ b/web/themes/custom/cloudy/templates/media/media--image--embedded.html.twig
@@ -12,12 +12,4 @@
  * @ingroup themeable
  */
 #}
-{% extends 'media.html.twig' %}
-
-{% set attributes = attributes.addClass('text-center') %}
-
-{% block content %}
-  {% if content.image %}
-    {{- content.image -}}
-  {% endif %}
-{% endblock %}
+{% include 'media.html.twig' %}
