--- a/web/themes/custom/cloudy/scss/components/_field.scss
+++ b/web/themes/custom/cloudy/scss/components/_field.scss
@@ -109,7 +109,8 @@
 }
 
 .field--label-inline .field__label,
-.field--label-inline .field__item {
+.field--label-inline .field__item,
+.field-label-inline {
   display: inline-block;
 }
 
