--- a/web/themes/custom/cloudy/templates/groups/project/group--project--teaser.html.twig
+++ b/web/themes/custom/cloudy/templates/groups/project/group--project--teaser.html.twig
@@ -5,7 +5,7 @@
   </h3>
   {% if content.field_summary %}
     <div class="order-2">
-      {% if content.field_start_date.0 %}
+      {% if content.field_start_date.0 is defined or content.field_end_date.0 is defined %}
         <div class="project-dates h5 mb-1"><i class="fas fa-calendar"></i>
           {% if content.field_start_date.0 %}
             {{ content.field_start_date.0 }}
