POWR-952 Realign service mode badge

--- a/web/themes/custom/cloudy/scss/components/_paragraphs.scss
+++ b/web/themes/custom/cloudy/scss/components/_paragraphs.scss
@@ -16,6 +16,7 @@ ul.paragraphs-add-dialog-list {
     }
   }
   .paragraph-top {
+    align-items: center;
     margin-bottom: $spacer;
     .paragraph-type {
       grid-column: 1 / span 2;
@@ -29,6 +30,9 @@ ul.paragraphs-add-dialog-list {
       .paragraph-type-label {
         font-size: $font-size-lg;
       }
+    }
+    .paragraph-info {
+      grid-column: 3 / span 1;
     }
   }
 }
