POWR-854 style adjustments for prev/next links on events filters

--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -83,3 +83,16 @@ td .form-check-input {
 .entity-embed-dialog-step--embed .container-inline div {
   display: block;
 }
+
+// exposed filter forms
+
+div.date-links {
+  flex-basis: 100%;
+  margin-bottom: 30px;
+}
+span.prev-link {
+  margin-right: 30px;
+}
+span.next-link .fas {
+  margin: 0 0 0 .5rem;
+}
