POWR-983 Format news and event date

--- a/web/themes/custom/cloudy/scss/components/_field.scss
+++ b/web/themes/custom/cloudy/scss/components/_field.scss
@@ -165,3 +165,19 @@ span.postal-code {
 .field--label-above label {
   font-weight: 700;
 }
+
+.time {
+  &:before {
+    @extend %font-awesome-icon;
+    content: $time-icon;
+    padding-right: ($spacer / 3);
+  }
+}
+
+.date {
+  &:before {
+    @extend %font-awesome-icon;
+    content: $date-icon;
+    padding-right: ($spacer / 3);
+  }
+}
