POWR-983 Add Sass Font Awesome mixin and update classes

--- a/web/themes/custom/cloudy/scss/_mixins.scss
+++ b/web/themes/custom/cloudy/scss/_mixins.scss
@@ -2,19 +2,30 @@
 /* EXTENDS */
 
 // FontAwesome icon
-%font-awesome-icon {
-  display: inline-block;
-  vertical-align: middle;
+%fa-icon {
+  font-family: "Font Awesome 5 Free";
   font-style: normal;
-  font-variant: normal;
+  font-variant-caps: normal;
+  font-variant-ligatures: normal;
+  font-weight: 900;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
-  font-family: "Font Awesome 5 Free";
-  font-size: $font-size-sm;
-  font-weight: 900;
 }
 
 /* MIXINS */
+
+// Display icons using pseudo element
+@mixin icon($icon, $p-direction, $p-amount, $disp: inline-block, $size: $font-size-sm) {
+  @extend %fa-icon;
+  content: $icon;
+  display: $disp;
+  font-size: $size;
+  @if $p-direction == all {
+    padding: $p-amount;
+  } @else {
+    padding-#{$p-direction}: $p-amount;
+  }
+}
 
 //
 // Alternate buttons
