--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -277,9 +277,7 @@ div.paragraph--type--document {
 
 span.ext {
   &:after {
-    @extend %font-awesome-icon;
-    content: $ext-icon;
-    padding-left: ($spacer / 3);
+    @include icon($font-size-sm, $ext-icon, left, ($spacer * .5));
   }
 }
 
