--- a/web/themes/custom/cloudy/scss/components/_field.scss
+++ b/web/themes/custom/cloudy/scss/components/_field.scss
@@ -166,18 +166,16 @@ span.postal-code {
   font-weight: 700;
 }
 
-.time {
-  &:before {
-    @extend %font-awesome-icon;
-    content: $time-icon;
-    padding-right: ($spacer / 3);
+// Event date and time
+.event {
+  &--date {
+    &:before {
+      @include icon($cal-icon, right, ($spacer * .5));
+    }
   }
-}
-
-.date {
-  &:before {
-    @extend %font-awesome-icon;
-    content: $date-icon;
-    padding-right: ($spacer / 3);
+  &--time {
+    &:before {
+      @include icon($clock-icon, right, ($spacer * .5));
+    }
   }
 }
