--- a/web/themes/custom/cloudy/scss/_icons.scss
+++ b/web/themes/custom/cloudy/scss/_icons.scss
@@ -1,3 +1,3 @@
-$ext-icon: "\f35d";
-$time-icon: "\f017";
-$date-icon: "\f133";
+$ext-icon: "\f35d"; // External links
+$clock-icon: "\f017";
+$cal-icon: "\f133";
