POWR-983 Render date on News teaser listing and default view modes

--- a/web/themes/custom/cloudy/templates/field/field--node-post-date.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--node-post-date.html.twig
@@ -1,15 +1,4 @@
-{% embed 'field.html.twig' with {
-    'margin' : '4',
-} %}
-  {% spaceless %}
-    {% block content %}
-      {%- for item in items if item.content|render|striptags|trim is not empty -%}
-        {% set item_classes = item_classes|merge(['time']) %}
-        {% set post_date = item.content.value|date('M j, Y') %}
-        <time{{item.attributes.addClass(item_classes)}}>
-          {{ post_date }}
-        </time>
-      {%- endfor -%}
-    {% endblock %}
-  {% endspaceless %}
-{% endembed %}
+{% extends "field.html.twig" %}
+{% set margin = '4' %}
+{% set created_date = item.content|date('M j, Y') %}
+{% block content created_date|t %}
