--- a/web/themes/custom/cloudy/templates/content/news/node--news--teaser.html.twig
+++ b/web/themes/custom/cloudy/templates/content/news/node--news--teaser.html.twig
@@ -1,11 +1,19 @@
-<div class="d-flex flex-column align-items-start mb-4">
-  <h2>
-    <a href="{{ url }}" rel="bookmark">
-      {{ label }}</a>
-  </h2>
-  {% if node.field_summary.value %}
-    <div>
-      <p>{{ node.field_summary.value }}</p>
-    </div>
-  {% endif %}
-</div>
+{% spaceless %}
+  <div class="d-flex flex-column align-items-start mb-4">
+    <h2>
+      <a href="{{ url }}" rel="bookmark">
+        {{ label }}</a>
+    </h2>
+    {% if node.created.value %}
+      {% set created_date = node.created.value|date('M j, Y') %}
+      <div>
+        {{ created_date|t }}
+      </div>
+    {% endif %}
+    {% if node.field_summary.value %}
+      <div>
+        <p>{{ node.field_summary.value }}</p>
+      </div>
+    {% endif %}
+  </div>
+{% endspaceless %}
