POWR-983 Change news teaser date format and prepend published string

--- a/web/themes/custom/cloudy/templates/content/news/node--news--teaser.html.twig
+++ b/web/themes/custom/cloudy/templates/content/news/node--news--teaser.html.twig
@@ -2,13 +2,16 @@
   <div class="d-flex flex-column align-items-start mb-4">
     <h2>
       <a href="{{ url }}" rel="bookmark">
-        {{ label }}</a>
+        {{ label }}
+      </a>
     </h2>
     {% if node.created.value %}
-      {% set created_date = node.created.value|date('M j, Y') %}
-      <div>
-        {{ created_date|t }}
-      </div>
+      {% set created_date = node.created.value|format_date('month_day_year') %}
+      <span class="small mb-1">
+        {% trans %}
+          Published {{ created_date }}
+        {% endtrans %}
+      </span>
     {% endif %}
     {% if node.field_summary.value %}
       <div>
