POWR-990 Configured featured fields to use card small layout, updated templates to support the layouts.

--- a/web/themes/custom/cloudy/scss/components/_card.scss
+++ b/web/themes/custom/cloudy/scss/components/_card.scss
@@ -19,7 +19,7 @@
 }
 
 // Equal height grid
-.card-group--related .view-content {
+.card-group--related .view-content, .card-group--featured {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   grid-auto-rows: 1fr;
