POWR-983 Render published date on news search results

--- a/web/themes/custom/cloudy/templates/content/news/node--news--search-result.html.twig
+++ b/web/themes/custom/cloudy/templates/content/news/node--news--search-result.html.twig
@@ -3,8 +3,16 @@
     <a href="{{ url }}" rel="bookmark">
       {{ label }}</a>
   </h3>
+  {% if node.created.value %}
+    {% set created_date = node.created.value|format_date('month_day_year') %}
+    <span class="small order-3 mb-1">
+      {% trans %}
+        Published {{ created_date }}
+      {% endtrans %}
+    </span>
+  {% endif %}
   {% if node.field_summary.value %}
-    <div class="order-3">
+    <div class="order-4">
       <p>{{ node.field_summary.value }}</p>
     </div>
   {% endif %}
