POWR-983 Update external link icon include

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -277,7 +277,7 @@ div.paragraph--type--document {
 
 span.ext {
   &:after {
-    @include icon($font-size-sm, $ext-icon, left, ($spacer * .5));
+    @include icon($ext-icon, left, ($spacer * 0.5));
   }
 }
 
