--- a/web/themes/custom/cloudy/templates/field/field--field-featured-content.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--field-featured-content.html.twig
@@ -1,42 +1,5 @@
-{#
-/**
- * @file
- * Theme override for a field.
- *
- * To override output, copy the "field.html.twig" from the templates directory
- * to your theme's directory and customize it, just like customizing other
- * Drupal templates such as page.html.twig or node.html.twig.
- *
- * Instead of overriding the theming for all fields, you can also just override
- * theming for a subset of fields using
- * @link themeable Theme hook suggestions. @endlink For example,
- * here are some theme hook suggestions that can be used for a field_foo field
- * on an article node type:
- * - field--node--field-foo--article.html.twig
- * - field--node--field-foo.html.twig
- * - field--node--article.html.twig
- * - field--field-foo.html.twig
- * - field--text-with-summary.html.twig
- * - field.html.twig
- *
- * Available variables:
- * - attributes: HTML attributes for the containing element.
- * - label_hidden: Whether to show the field label or not.
- * - title_attributes: HTML attributes for the title.
- * - label: The label for the field.
- * - multiple: TRUE if a field can contain multiple items.
- * - items: List of all the field items. Each item contains:
- *   - attributes: List of HTML attributes for each item.
- *   - content: The field item's content.
- * - entity_type: The entity type to which the field belongs.
- * - field_name: The name of the field.
- * - field_type: The type of the field.
- * - label_display: The display settings for the label.
- *
- * @see template_preprocess_field()
- */
-#}
-{% set margin = margin|default('0') %}
+
+{% set margin = margin|default('5') %}
 
 {% set classes = classes|default([]) %}
 
@@ -69,15 +32,13 @@
     <div{{attributes.addClass(field_classes).addClass(classes)}}>
         {% block label %}
         {%- if not label_hidden -%}
-            <h2><label{{title_attributes.addClass(title_classes)}}>{{ label|render }}</label></h2>
+            <h2>{{ label|render }}</h2>
         {%- endif -%}
     {% endblock %}
     <div class="card-group--featured">
     {% block content %}
     {%- for item in items -%}
-        <div{{item.attributes.addClass(item_classes)}}>
-            {{ item.content }}
-        </div>
+      {{ item.content }}
     {%- endfor -%}
     {% endblock %}
     </div>
