POWR-983 Update event templates and modify icon mixin to accept empty padding amount

--- a/web/themes/custom/cloudy/scss/_mixins.scss
+++ b/web/themes/custom/cloudy/scss/_mixins.scss
@@ -15,7 +15,7 @@
 /* MIXINS */
 
 // Display icons using pseudo element
-@mixin icon($icon, $p-direction, $p-amount, $disp: inline-block, $size: $font-size-sm) {
+@mixin icon($icon, $p-direction, $p-amount: null, $disp: inline-block, $size: $font-size-sm) {
   @extend %fa-icon;
   content: $icon;
   display: $disp;
