--- a/web/themes/custom/cloudy/templates/content/events/node--event--search-result.html.twig
+++ b/web/themes/custom/cloudy/templates/content/events/node--event--search-result.html.twig
@@ -1,3 +1,11 @@
+{{ devel_breakpoint(content.field_end_date) }}
+{% set margin = margin|default('1') %}
+{%
+  set datetime_classes = datetime_classes|default([
+    'small',
+    'mb-' ~ margin,
+  ])
+%}
 {% spaceless %}
 <div class="row flex-column mb-4">
   <div class="col-12 col-md-8">
@@ -14,25 +22,29 @@
           {{ label }}</a>
       </h3>
     {% endblock %}
-    {% block time %}
-      {% set time_attribute = create_attribute() %}
-      {%
-        set time_classes = [
-          'event--time',
-          'small',
-          'mb-1',
-        ]
-      %}
-      <span{{ time_attribute.addClass(time_classes) }}>
-        {% if node.field_all_day.value %}
-          <span>{{ "All day"|t }}</span>
-        {% elseif node.field_start_time.value and node.field_end_time.value %}
-          <span>{{ node.field_start_time.value|date('g:i A', false) }}</span><span class="px-1">to</span><span>{{ node.field_end_time.value|date('g:i A', false) }}</span>
-        {% else %}
-          <span>{{ node.field_start_time.value|date('g:i A', false) }}</span>
-        {% endif %}
-      </span>
-    {% endblock time %}
+    {% block datetime %}
+      {% set start_date = node.field_start_date.value %}
+      {% set end_date = node.field_end_date.value %}
+      {% set all_day = node.field_all_day.value %}
+      {% set start_time = node.field_start_time.value %}
+      {% set end_time = node.field_end_time.value %}
+      {% if start_date and end_date %}
+        <div{{ attributes.addClass(datetime_classes, 'event--date').removeClass(remove_classes) }}><time>{{ start_date|date('U')|format_date('month_day_year') }}</time>
+        <span class="px-1">{{ "to"|t }}</span>
+        <time>{{ end_date|date('U')|format_date('month_day_year') }}</time></div>
+      {% elseif start_date %}
+        <div{{ attributes.addClass(datetime_classes, 'event--date').removeClass(remove_classes) }}><time>{{ start_date|date('U')|format_date('month_day_year') }}</time></div>
+      {% endif %}
+      {% if all_day %}
+        <div{{ attributes.addClass(datetime_classes, 'event--time').removeClass(remove_classes) }}><time>{{ "All day"|t }}</time></div>
+      {% elseif node.field_start_time.value and node.field_end_time.value %}
+        <div{{ attributes.addClass(datetime_classes, 'event--time').removeClass(remove_classes) }}><time>{{ node.field_start_time.value|date('g:i A', false) }}</time>
+        <span class="px-1">{{ "to"|t }}</span>
+        <time>{{ node.field_end_time.value|date('g:i A', false) }}</time></div>
+      {% else %}
+        <div{{ attributes.addClass(datetime_classes, 'event--time').removeClass(remove_classes) }}><time>{{ node.field_start_time.value|date('g:i A', false) }}</time></div>
+      {% endif %}
+    {% endblock %}
     {% block content %}
       <p>{{ node.field_summary.value }}</p>
     {% endblock %}
