--- a/web/themes/custom/cloudy/templates/content/events/node--event--teaser.html.twig
+++ b/web/themes/custom/cloudy/templates/content/events/node--event--teaser.html.twig
@@ -1,21 +1,6 @@
-{% embed "node--event--search-result.html.twig" %}
-  {% block label %}{% endblock %}
-  {% block title %}
-    {{ parent() }}
-  {% endblock title %}
-  {% block time %}
-    <span class="event--time mb-1">
-      {% set event_time_classes = value %}
-      {% if node.field_all_day.value %}
-        <span>{{ "All day"|t }}</span>
-      {% elseif node.field_start_time.value and node.field_end_time.value %}
-        <span>{{ node.field_start_time.value|date('g:i A', false) }}</span>
-        <span class="px-1">to</span>
-        <span>{{ node.field_end_time.value|date('g:i A', false) }}</span>
-      {% else %}
-        <span>{{ node.field_start_time.value|date('g:i A', false) }}</span>
-      {% endif %}
-    </span>
-  {% endblock %}
-  {% block content %}{% endblock %}
-{% endembed  %}
+{% extends "node--event--search-result.html.twig" %}
+{% set remove_classes = ['small'] %}
+{% block label %}
+{% endblock %}
+{% block content %}
+{% endblock %}
